[package]
name = "ratara-runtime"
version = "4.0.0-dev"
description = "Mutaratara, meaning orderly, is the runtime powering Kobole,a Proof of Stake, NFT enabled DAO."
authors = ["MJR.Mu7"]
homepage = ""
edition = "2021"
license = "GPLv3"
publish = false
repository = ""

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
static_assertions = "1.1.0"
log = { version = "0.4.14", default-features = false }
pallet-authorship = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18"  }
pallet-babe = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18"  }
pallet-balances = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18"  }
frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18"  }
pallet-grandpa = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18"  }
pallet-randomness-collective-flip = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18"  }
pallet-sudo = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18"  }
frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18"  }
frame-try-runtime = { version = "0.10.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18"  }
pallet-timestamp = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18"  }
pallet-transaction-payment = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18"  }
pallet-bags-list = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18"  }
pallet-session = { version = "4.0.0-dev", default-features = false, features = [ "historical" ], git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18"  }
pallet-staking = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18"  }
pallet-staking-reward-curve = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18"  }
pallet-election-provider-multi-phase = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18"  }
frame-election-provider-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18"  }
frame-executive = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18"  }
pallet-utility = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18"  }
pallet-offences = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18"  }
pallet-offences-benchmarking = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" , optional = true }
pallet-im-online = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18"  }
frame-system-rpc-runtime-api = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18"  }
pallet-transaction-payment-rpc-runtime-api = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18"  }
frame-benchmarking = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" , optional = true }
frame-system-benchmarking = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" , optional = true }
hex-literal = { version = "0.3.4", optional = true }
node-primitives = { version = "2.0.0", default-features = false, path = "../primitives" }
sp-api = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18"  }
sp-block-builder = {  version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
sp-consensus-babe = { version = "0.10.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18"  }
sp-core = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18"  }
sp-inherents = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
sp-offchain = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18"  }
sp-runtime = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18"  }
sp-io = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18"  }
sp-staking = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18"  }
sp-npos-elections = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18"  }
sp-session = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18"  }
sp-std = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18"  }
sp-transaction-pool = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18"  }
sp-version = { version = "5.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18"  }
pallet-scheduler = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18"  }
pallet-treasury = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18"  }
pallet-collective = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18"  }
pallet-membership = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18"  }
pallet-democracy = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18"  }
pallet-preimage = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18"  }
pallet-elections-phragmen = { version = "5.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18"  }
pallet-contracts = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.18" , version = '4.0.0-dev'}
pallet-contracts-primitives = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.18" , version = '6.0.0'}
pallet-contracts-rpc-runtime-api = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.18" , version = '4.0.0-dev'}
pallet-identity = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.18" , version = '4.0.0-dev'}
pallet-mmr = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.18" , version = '4.0.0-dev'}
pallet-multisig = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.18" , version = '4.0.0-dev'}
pallet-proxy = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.18" , version = '4.0.0-dev'}
pallet-recovery = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.18" , version = '4.0.0-dev'}
pallet-society = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.18" , version = '4.0.0-dev'}
pallet-asset-tx-payment = { default-features = false, git = 'https://github.com/paritytech/substrate.git', version = '4.0.0-dev', branch = "polkadot-v0.9.18" }
pallet-assets = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.18" , version = '4.0.0-dev'}
pallet-vesting = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.18" , version = '4.0.0-dev'}
pallet-indices = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.18" , version = '4.0.0-dev'}
pallet-uniques = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.18" , version = '4.0.0-dev'}
pallet-bounties = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.18" , version = '4.0.0-dev'}
pallet-child-bounties = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.18" , version = '4.0.0-dev'}
pallet-tips = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.18" , version = '4.0.0-dev'}
pallet-state-trie-migration = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.18" , version = '4.0.0-dev'}
pallet-gilt = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.18" , version = '4.0.0-dev'}
pallet-lottery = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.18" , version = '4.0.0-dev'}
pallet-referenda = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.18" , version = '4.0.0-dev'}
pallet-whitelist = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.18" , version = '4.0.0-dev'}
pallet-domains = { path = "../../pallets/domains", default-features = false }
peak-nft = { path = "../../pallets/peak-nft", default-features = false }
pallet-ko-nft = { path = "../../pallets/nft", default-features = false, version = "1.0.0" }

pallet-transaction-storage = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.18" }
pallet-conviction-voting = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.18" }
sp-sandbox = { version = "0.10.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.18" }
sp-authority-discovery = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.18" }
pallet-authority-discovery = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.18" }

orml-currencies = { path = "../../pallets/currencies", default-features = false, version = "0.4.1-dev" }
orml-tokens = { path = "../../pallets/tokens", default-features = false, version = "0.4.1-dev" }
orml-traits = { path = "../../pallets/traits", default-features = false, version = "0.4.1-dev" }
orml-utilities = { path = "../../pallets/utilities", default-features = false, version = "0.4.1-dev" }

#EVM //Still working on a solution.
pallet-base-fee = { path = "../../pallets/base-fee", default-features = false }
pallet-dynamic-fee = { path = "../../pallets/dynamic-fee", default-features = false }
pallet-ethereum = { path = "../../pallets/ethereum", default-features = false }
pallet-evm = { path = "../../pallets/evm", default-features = false }
pallet-evm-precompile-modexp = { path = "../../pallets/evm/precompile/modexp", default-features = false }
pallet-evm-precompile-sha3fips = { path = "../../pallets/evm/precompile/sha3fips", default-features = false }
pallet-evm-precompile-simple = { path = "../../pallets/evm/precompile/simple", default-features = false }

fp-rpc = { path = "../../primitives/rpc", default-features = false }
fp-self-contained = { path = "../../primitives/self-contained", default-features = false }

[build-dependencies]
substrate-wasm-builder = { version = "5.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18"  }

[features]
default = ["std"]
std = [
	"sp-authority-discovery/std",
	"codec/std",
	"scale-info/std",
	"log/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"pallet-authority-discovery/std",
	"pallet-authorship/std",
	"pallet-babe/std",
	"pallet-balances/std",
	"pallet-conviction-voting/std",
	"pallet-grandpa/std",
	"pallet-randomness-collective-flip/std",
	"pallet-sudo/std",
	"pallet-scheduler/std",
	"pallet-treasury/std",
	"pallet-collective/std",
	"pallet-membership/std",
	"pallet-democracy/std",
	"pallet-elections-phragmen/std",
	"pallet-preimage/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-bags-list/std",
	"pallet-session/std",
	"pallet-staking/std",
	"pallet-offences/std",
	"pallet-election-provider-multi-phase/std",
	"pallet-utility/std",
	"pallet-im-online/std",
	"pallet-transaction-storage/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-babe/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-staking/std",
	"sp-npos-elections/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"node-primitives/std",
	"pallet-ko-nft/std",
	"peak-nft/std",
	'pallet-contracts/std',
    'pallet-contracts-primitives/std',
    'pallet-contracts-rpc-runtime-api/std',
	'pallet-mmr/std',
	'pallet-multisig/std',
	'pallet-identity/std',
    'pallet-proxy/std',
    'pallet-society/std',
	'pallet-recovery/std',
	'pallet-asset-tx-payment/std',
	'pallet-assets/std',
	'pallet-vesting/std',
	'pallet-indices/std',
	'pallet-uniques/std',
	'pallet-whitelist/std',
	'pallet-referenda/std',
	'pallet-lottery/std',
	'pallet-gilt/std',
	'pallet-state-trie-migration/std',
	'pallet-tips/std',
	'pallet-child-bounties/std',
	'pallet-bounties/std',
	"fp-rpc/std",
	"fp-self-contained/std",
	"pallet-base-fee/std",
	"pallet-dynamic-fee/std",
	"pallet-ethereum/std",
	"pallet-evm/std",
	"pallet-evm-precompile-simple/std",
	"pallet-evm-precompile-sha3fips/std",
	"pallet-domains/std",
	'orml-currencies/std',
	'orml-tokens/std',
	'orml-traits/std',
	'orml-utilities/std',	
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking",
	"frame-system/runtime-benchmarks",
	"hex-literal",
	"pallet-balances/runtime-benchmarks",
	#"pallet-template/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-utility/runtime-benchmarks",
	"pallet-im-online/runtime-benchmarks",
	"pallet-offences-benchmarking",
	"sp-runtime/runtime-benchmarks",
	"pallet-scheduler/runtime-benchmarks",
	"pallet-treasury/runtime-benchmarks",
	"pallet-collective/runtime-benchmarks",
	"pallet-membership/runtime-benchmarks",
	"pallet-democracy/runtime-benchmarks",
	"pallet-elections-phragmen/runtime-benchmarks",
	"pallet-preimage/runtime-benchmarks",

	'pallet-assets/runtime-benchmarks',
	'pallet-mmr/runtime-benchmarks',
	'pallet-multisig/runtime-benchmarks',
	'pallet-identity/runtime-benchmarks',
    'pallet-proxy/runtime-benchmarks',
    'pallet-society/runtime-benchmarks',
	'pallet-vesting/runtime-benchmarks',
	'pallet-indices/runtime-benchmarks',
	'pallet-uniques/runtime-benchmarks',

	"pallet-ethereum/runtime-benchmarks",
	"pallet-evm/runtime-benchmarks",	
	"pallet-domains/runtime-benchmarks",
]
